--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ body {
   
 }
 
-#section1 h1 {
+h1 {
   font-size: 80px;
   color: #DFDFE5;
   padding-top: 300px;
@@ -40,7 +40,7 @@ body {
   font-size: 30px;
   margin-top: 10px;
   color: white;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 #section4 {
@@ -53,16 +53,43 @@ body {
   border-radius: 80% !important;
 }
 
-h1 {
-  font-size: 1rem;
+@media screen and (max-width: 1024px) {
+  #section1 h1 {
+      font-size: 80px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #section1 h1 {
+      font-size: 4.0rem;
+  }
+
+  #section1 h2 {
+      font-size: 1.5rem;
+  }
 }
 
 @media screen and (max-width: 480px) {
   #section1 h1 {
-      font-size: 5.0rem;
+      font-size: 3.0rem;
+  }
+
+  #section1 h2 {
+      font-size: 1.5rem;
+  }
+
+  #section1_wrapper {
+    background: linear-gradient( to bottom right, rgba(30, 115, 172, 0.7), rgba(203, 22, 209, 0.2)), url("fast.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 800px;
   }
 }
 
+
+
+
+/*
 @media (min-width: 768px) and (max-width: 991px) {
   #section1 h1 {
       font-size: 20.0rem;
@@ -85,6 +112,6 @@ h1 {
   h1 {
       font-size: 2.2rem;
   }
-}
+} */
 
 
