--- a/main.css
+++ b/main.css
@@ -7,9 +7,13 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   vertical-align: baseline;
   background: transparent;
 }
+html {
+  overflow-x: hidden;
+}
 
 body {
   font-family: "Lato", sans-serif;
+  overflow-x: hidden;
 }
 
 /* #section1 h1, h2, button, a {
@@ -64,43 +68,16 @@ h2 {
   cursor: pointer;
 }
 
-@media screen and (max-width: 1024px) {
-  #section1 h1 {
-      font-size: 80px;
-  }
-}
 
-@media screen and (max-width: 768px) {
-  #section1 h1 {
-      font-size: 4.0rem;
-  }
 
-  #section1 h2 {
-      font-size: 1.5rem;
-  }
-}
 
-@media screen and (max-width: 480px) {
-  #section1 h1 {
-      font-size: 3.0rem;
-      padding-top: 200px;
-  }
-
-  #section1 h2 {
-      font-size: 1.5rem;
-  }
-
-  #section1_wrapper {
-    background: linear-gradient( to bottom right, rgba(30, 115, 172, 0.7), rgba(203, 22, 209, 0.2)), url("fast.gif");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 800px;
-  }
+  
 }
 
 .flex-container {
   display: flex;
   /* flex-wrap: wrap; */
+  justify-content: center;
 }
 
 #section2_wrapper {
@@ -165,4 +142,71 @@ img {
 
 .section2_p {
   font-size: 18px;
+}
+
+
+@media screen and (max-width: 1024px) {
+  #section1 h1 {
+      font-size: 80px;
+  }
+  
+
+  #section2 {
+    margin-left: 10px;
+    /* margin-right: 50px; */
+    padding-top: 100px;
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #section1 h1 {
+      font-size: 4.0rem;
+  }
+
+  #section1 h2 {
+      font-size: 1.5rem;
+  }
+
+}
+
+@media screen and (max-width: 480px) {
+  #section1 h1 {
+      font-size: 3.0rem;
+      padding-top: 200px;
+  }
+
+  #section1 h2 {
+      font-size: 1.5rem;
+  }
+
+  /* SECTION2 */
+  .flex-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #section2_wrapper {
+    height: 1600px;
+  }
+
+  #section2 {
+    padding-right: 50px;
+    text-align: center;
+    margin-bottom: -150px;
+  }
+
+  img {
+    width: 60%;
+    margin-left: 100px;
+  }
+
+  #section1_wrapper {
+    background: linear-gradient( to bottom right, rgba(30, 115, 172, 0.7), rgba(203, 22, 209, 0.2)), url("fast.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 800px;
+  }
+
+  
 }
