--- a/main.css
+++ b/main.css
@@ -184,6 +184,7 @@ img {
   .flex-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   #section2_wrapper {
@@ -191,14 +192,14 @@ img {
   }
 
   #section2 {
-    padding-right: 50px;
+    /* padding-right: 50px; */
     text-align: center;
     margin-bottom: -150px;
   }
 
   img {
-    width: 60%;
-    margin-left: 100px;
+    width: 100%;
+    /* margin-left: 100px; */
   }
 
   #section1_wrapper {
