--- a/main.css
+++ b/main.css
@@ -68,12 +68,6 @@ h2 {
   cursor: pointer;
 }
 
-
-
-
-  
-}
-
 .flex-container {
   display: flex;
   /* flex-wrap: wrap; */
@@ -200,7 +194,7 @@ img {
 
   img {
     width: 100%;
-    /* margin-left: 100px; */
+    margin-left: 100px;
   }
 
   #section1_wrapper {
@@ -209,6 +203,5 @@ img {
     background-repeat: no-repeat;
     height: 800px;
   }
-
   
 }
