--- a/main.css
+++ b/main.css
@@ -29,6 +29,7 @@ body {
 
 
 
+
 #section1 {
   text-align: center;
   
@@ -85,9 +86,12 @@ h2 {
 }
 
 #section3_wrapper {
-  background-color: blue;
-  height: 1000px;
+  background: linear-gradient( to bottom right, rgba(30, 115, 172, 0.7), rgba(203, 22, 209, 0.2)), url("overgrown.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 700px;
 }
+
 #section4_wrapper {
   background-color: brown;
   height: 1000px;
@@ -138,6 +142,20 @@ img {
   font-size: 18px;
 }
 
+.card {
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  height: 300px;
+  margin: 1rem;
+  position: relative;
+  width: 270px;
+  opacity: .8;
+}
+
+#section3 {
+  margin-top: 200px;
+}
 
 @media screen and (max-width: 1024px) {
   #section1 h1 {
@@ -198,7 +216,7 @@ img {
   }
 
   #section1_wrapper {
-    background: linear-gradient( to bottom right, rgba(30, 115, 172, 0.7), rgba(203, 22, 209, 0.2)), url("fast.gif");
+    background: linear-gradient( to bottom right, rgba(30, 115, 172, 0.9), rgba(203, 22, 209, 0.2)), url("fast.gif");
     background-size: cover;
     background-repeat: no-repeat;
     height: 800px;
