--- a/main.css
+++ b/main.css
@@ -157,6 +157,12 @@ img {
   margin-top: 200px;
 }
 
+.flex-container2{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media screen and (max-width: 1024px) {
   #section1 h1 {
       font-size: 80px;
@@ -199,8 +205,14 @@ img {
     align-items: center;
   }
 
+  #section2-1 div.flex-container {
+    display: flex;
+    flex-direction: row;
+    /* align-items: center; */
+  }
+
   #section2_wrapper {
-    height: 1600px;
+    height: 990px;
   }
 
   #section2 {
@@ -211,7 +223,7 @@ img {
   }
 
   img {
-    width: 80%;
+    width: 30%;
     /* margin-left: 100px; */
   }
 
