--- a/main.css
+++ b/main.css
@@ -94,7 +94,7 @@ h2 {
 
 #section4_wrapper {
   background-color: brown;
-  height: 1000px;
+  /* height: 1000px; */
 }
 
 #section2 {
@@ -153,6 +153,11 @@ img {
   opacity: .8;
 }
 
+.i-marg {
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+
 #section3 {
   margin-top: 200px;
 }
@@ -161,6 +166,14 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#section3 {
+  text-align: center;
+}
+
+.fa {
+  font-size:48px !important;
 }
 
 @media screen and (max-width: 1024px) {
@@ -232,6 +245,10 @@ img {
     background-size: cover;
     background-repeat: no-repeat;
     height: 800px;
+  }
+
+  #section3_wrapper {
+    height: 1700px;
   }
   
 }
