--- a/main.css
+++ b/main.css
@@ -366,14 +366,26 @@ h5 {
     height: 1700px;
   }
 
-  .flip-card:hover .flip-card-inner {
-    transform: ;
-  }
+  .animated {
+		/*CSS transitions*/
+		-o-transition-property: none !important;
+		-moz-transition-property: none !important;
+		-ms-transition-property: none !important;
+		-webkit-transition-property: none !important;
+		transition-property: none !important;
+		/*CSS transforms*/
+		-o-transform: none !important;
+		-moz-transform: none !important;
+		-ms-transform: none !important;
+		-webkit-transform: none !important;
+		transform: none !important;
+		/*CSS animations*/
+		-webkit-animation: none !important;
+		-moz-animation: none !important;
+		-o-animation: none !important;
+		-ms-animation: none !important;
+		animation: none !important;
+	}
 
-  .flip-card-back {
-    /* background-color: dodgerblue;
-    color: white; */
-    transform: rotateY(180deg);
-  }
   
 }
