--- a/main.css
+++ b/main.css
@@ -318,6 +318,18 @@ h5 {
   width: 50%;
 }
 
+.modalBottom {
+  margin: 100px 0px;
+  text-align: center;
+  align-content: center;
+}
+
+#secondCardBtn {
+  width: 100%;
+  height: 40px;
+  margin-top: 50px;
+}
+
 .backCard p span {
   background-color: darkslategray;
 }
@@ -341,7 +353,7 @@ h5 {
 #id01 img{
 
   width: 80%;
-  height: 400px;
+  height: 700px;
 }
 
 @media screen and (max-width: 1024px) {
