--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@ h2 {
 
 #section4_wrapper {
   background-color: white;
-  height: 1000px;
+  height: 700px;
 }
 
 #section2 {
@@ -321,7 +321,7 @@ h5 {
 
 .modalBottom {
   margin: 100px 0px;
-  text-align: center;
+  text-align: left;
   align-content: center;
 }
 
@@ -347,6 +347,7 @@ h5 {
   display: flex;
   flex-direction: row;
   width: 100%;
+  
   /* flex-wrap: wrap; */
   /* justify-content: left; */
 }
@@ -354,7 +355,7 @@ h5 {
 #id01 img{
 
   width: 80%;
-  height: 700px;
+  height: 500px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -406,7 +407,7 @@ h5 {
   }
 
   #section2_wrapper {
-    height: 1050px;
+    height: 1100px;
   }
 
   #section2 {
@@ -439,6 +440,35 @@ h5 {
   .flip-card-back {
     transform: rotateY(0deg);
   }
+
+  .w3-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    
+    /* flex-wrap: wrap; */
+    /* justify-content: left; */
+  }
+
+  #id01 img{
+
+    width: 100%;
+    height: 350px;
+  }
+
+  .modalBottom {
+    margin: 10px 0px;
+    text-align: left;
+    align-content: center;
+  }
+
+  #secondCardBtn {
+    width: 100%;
+    height: 40px;
+    margin: 30px 0px;
+  }
+
+  
 
   
 }
