--- a/main.css
+++ b/main.css
@@ -16,8 +16,8 @@ html {
 
 body {
   font-family: "Lato", sans-serif;
-  /* overflow-x: hidden;
-  height:100%; */
+  overflow-x: hidden;
+  /* height:100%; */
 }
 
 /* #section1 h1, h2, button, a {
