--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font-size: 100%;
   vertical-align: baseline;
   background: transparent;
-  /* overflow: scroll; */
+  overflow: scroll;
   -webkit-overflow-scrolling: touch;
 }
 html {
@@ -16,7 +16,7 @@ html {
 
 body {
   font-family: "Lato", sans-serif;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* height:100%; */
 }
 
