--- a/main.css
+++ b/main.css
@@ -10,14 +10,24 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   -webkit-overflow-scrolling: touch;
 }
 html {
-  overflow-x: hidden;
-  scroll-behavior: smooth;
+  /* overflow-x: hidden; */
+  margin: 0 !important;
+    padding: 0 !important;
+    width: 100%;
+  
+  
 }
 
 body {
   font-family: "Lato", sans-serif;
   /* overflow-x: hidden; */
   /* height:100%; */
+  /* width: 100%;
+  height: 100%; */
+  scroll-behavior: smooth;
+  margin: 0 !important;
+    padding: 0 !important;
+    width: 100%;
 }
 
 /* #section1 h1, h2, button, a {
