--- a/main.css
+++ b/main.css
@@ -7,10 +7,10 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   vertical-align: baseline;
   background: transparent;
   /* overflow: scroll; */
-  -webkit-overflow-scrolling: touch;
+  /* -webkit-overflow-scrolling: touch; */
 }
 html {
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   margin: 0 !important;
     padding: 0 !important;
     width: 100%;
