--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ html {
 
 body {
   font-family: "Lato", sans-serif;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   /* height:100%; */
   /* width: 100%;
   height: 100%; */
