--- a/main.css
+++ b/main.css
@@ -10,10 +10,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   /* -webkit-overflow-scrolling: touch; */
 }
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   margin: 0 !important;
     padding: 0 !important;
     width: 100%;
+    height: 100%
   
   
 }
@@ -466,7 +467,7 @@ h5 {
   #id01 img{
 
     width: 100%;
-    height: 350px;
+    height: 200px;
   }
 
   .modalBottom {
