--- a/main.css
+++ b/main.css
@@ -11,25 +11,27 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 html {
   /* overflow-x: hidden; */
-  margin: 0 !important;
+  /* margin: 0 !important;
     padding: 0 !important;
     width: 100%;
-    height: 100%
-  
-  
+    max-width: 100%; 
+    overflow-x: hidden;
+    overflow-y: visible; */
 }
 
 body {
   font-family: "Lato", sans-serif;
   overflow-x: hidden;
   /* height:100%; */
-  /* width: 100%;
-  height: 100%; */
+   width: 100%;
+  /*height: 100%; */
   scroll-behavior: smooth;
   margin: 0 !important;
     padding: 0 !important;
     width: 100%;
+    overflow-y: hidden;
 }
+
 
 /* #section1 h1, h2, button, a {
   text-align: center;
@@ -112,7 +114,7 @@ h2 {
 
 #section4_wrapper {
   background-color: white;
-  height: 700px;
+  height: 900px;
 }
 
 #section2 {
@@ -207,7 +209,7 @@ h5 {
 #section4 {
   /* margin-left: 100px; */
   /* margin-right: 50px; */
-  padding-top: 170px;
+  padding-top: 30px;
   /* width: 600px; */
 }
 
